# dires

./: .gitignore  README.md
backend/: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile.txt  docker-compose.yml  vcpkg.json
backend/include/: collision.h  ids.h  packets.h  recipe.h  server.h  socket_utils.h  types.h  utils.h  weapons.h
backend/include/entities/: box.h  build.h  entity.h  mob.h  plant.h  player.h  resource.h
backend/settings/: recipe.json  world.json
backend/src/: main.cpp
ui/: next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
ui/app/: globals.css  layout.tsx  page.tsx  types.ts  ui_settings.ts  utils.ts
ui/app/canvas/: canvas.tsx  draw.ts
ui/app/classes/: client.ts  crafting.ts  keyboard.ts  mouse.ts  ui.ts  user.ts  world.ts
ui/app/components/ui/: button.tsx  cbox.tsx  glass_container.tsx  input.tsx  optionBtns.tsx  range.tsx
ui/app/effects/: blizard.min.ts  rain.min.ts  sandstorm.min.ts
ui/app/entities/: Resource.ts  STATE.ts  entity.ts  plant.ts  player.ts
ui/app/updateState/: interval.ts
ui/app/variables/: vars.ts
ui/lib/: ids.ts  recipe.ts  socket_manager.ts
ui/public/: recipe.json
